--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="toolbar">#02aace</color>
     <color name="white">#FFFFFF</color>
+    <color name="c">#00BCD4</color>
 </resources>
